# models/request.go
@@ -15,16 +15,31 @@ type MusicTrackRequest struct {
 	Mp3File     string `json:"mp3_file"`
 }
 
-type PlaylistRequest struct {
+type GetPlaylistRequest struct {
 	Title  string               `json:"title"`
-	Tracks []primitive.ObjectID `json:"tracks"`
 	Owner  primitive.ObjectID   `json:"owner"`
+	Track  []primitive.ObjectID `json:"track"`
+	Paging PagingRequest        `json:"paging"`
+}
+
+type GetMusicTrackRequest struct {
+	Title  string        `json:"title"`
+	Artist string        `json:"artist"`
+	Album  string        `json:"album"`
+	Genre  string        `json:"genre"`
+	Paging PagingRequest `json:"paging"`
+}
+
+type PlaylistRequest struct {
+	Title string               `json:"title"`
+	Track []primitive.ObjectID `json:"track"`
+	Owner primitive.ObjectID   `json:"owner"`
 }
 
 func (a PlaylistRequest) Validate() error {
 	return validation.ValidateStruct(&a,
 		validation.Field(&a.Title, validation.Required),
-		validation.Field(&a.Tracks, validation.Required),
+		validation.Field(&a.Track, validation.Required),
 		validation.Field(&a.Owner, validation.Required),
 	)
 }
