# utils/pagination.util.go
@@ -1,27 +1,20 @@
 package utils
 
 import (
-	"encoding/json"
 	"music-library-management/models"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
-func Pagination(c *gin.Context, response *models.Response) (int, int, string, map[string]interface{}, bool) {
-	pageStr := c.DefaultQuery("page", "1")
+func AsPageable(c *gin.Context) *models.PagingRequest {
+	pageStr := c.DefaultQuery("page", "0")
 	page, _ := strconv.Atoi(pageStr)
 	sizeStr := c.DefaultQuery("size", "10")
 	size, _ := strconv.Atoi(sizeStr)
 	sort := c.DefaultQuery("sort", "")
-	filter := c.DefaultQuery("filter", "")
+	pagingIgnoreStr := c.DefaultQuery("paging_ignore", "false")
+	pagingIgnore, _ := strconv.ParseBool(pagingIgnoreStr)
 
-	filterMap := make(map[string]interface{})
-	err := json.Unmarshal([]byte(filter), &filterMap)
-	if err != nil {
-		response.Message = err.Error()
-		response.SendResponse(c)
-		return 0, 0, "", nil, true
-	}
-	return page, size, sort, filterMap, false
+	return &models.PagingRequest{Page: page, Size: size, Sort: sort, PagingIgnore: pagingIgnore}
 }
